syntax = "proto3";
package fish;
option go_package = "pkg/protos";

service AbusiveUserService {
  // Hashes an image from a URL and adds it to the database
  rpc AddImageFromURL(AddImageFromURLRequest) returns (AddImageResponse);

  // Adds an image
  rpc AddImage(AddImageRequest) returns (AddImageResponse);

  // Removes a hashed image from the database
  rpc RemoveImage(RemoveImageRequest) returns (RemoveImageResponse);

  // Downloads an image and returns the nearest hash by phash hamming distance
  rpc CheckImage(CheckImageRequest) returns (CheckImageResponse);
}

message ImageHashes {
  string md5 = 1;
  string sha256 = 2;
  string pHash = 3;
}

message AddImageFromURLRequest {
  string url = 1;
}

message AddImageRequest {
  bytes image = 1;
}

message AddImageResponse {
  int32 id = 1;
  ImageHashes hashes = 2;
}

message RemoveImageRequest {
  int32 id = 1;
}

message RemoveImageResponse {}

message CheckImageRequest {
  string url = 1;
}

message CheckImageResponse {
  int32 id = 1;
  int32 phash_distance = 2;
  optional string source = 3;
  ImageHashes hashes = 4;
}
